🖼️ Added overflow-x: hidden to fix elements going outside of HTML doc.

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,17 +25,18 @@ body, html {
     background-color: $gray;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 header {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: $matte-black;
-    width: 100%;
+    width: 100vw;
     padding: 1.5rem;
     padding-top: 0;
     box-shadow: rgba(237, 85, 100, 0.4) 0px 5px, rgba(237, 85, 100, 0.3) 0px 10px, rgba(237, 85, 100, 0.2) 0px 15px, rgba(237, 85, 100, 0.1) 0px 20px, rgba(237, 85, 100, 0.05) 0px 25px;
+    
 
     h1 {
         color: whitesmoke;
